objects/ASI_CRM_Contract_Printout_Setting__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Content_Section_Name__c</fullName>
        <label>Content Section Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Contract__c</fullName>
        <label>Contract</label>
        <referenceTo>ASI_TH_CRM_Contract__c</referenceTo>
        <relationshipLabel>Contract Printout Setting</relationshipLabel>
        <relationshipName>Contract_Printout_Setting</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Header_Section_Name__c</fullName>
        <label>Header Section Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Section_Content__c</fullName>
        <label>Section Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_isVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Printout Setting</label>
    <nameField>
        <label>Contract Printout Setting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Printout Setting</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>